Solució Act6. Closes #7

--- a/acfour_eudald_fajula.csproj
+++ b/acfour_eudald_fajula.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\acfour_eudald_fajula_library\acfour_eudald_fajula_library.csproj" />
+  </ItemGroup>
+
 </Project>
